# sadie

./: .gitmodules  .local.vimrc  .syntastic_c_config  .travis.yml  README.md  circle.yml  circleci-matrix.yml  cross-file-Posix-clang  cross-file-Posix-gcc  cross-file-pc_i586  cross-file-x86_32  cross-file-x86_64  inttypes.h  local-matrix.yml  meson.build  meson.cross.file.arm-eabi.txt  meson.cross.file.gcc-5.txt  meson.cross.file.txt  meson.cross.file.x86_64.txt  meson.link.ld  meson_options.txt  platform-matrix.yml  poweroff.c  test.c  test_ac_acpi-b85m-with-8139.txt
arch/armv6/arm1176jzf-s/: meson.build
arch/x86/: meson.build
arch/x86/cpuid_x86/: meson.build
arch/x86/cr_x86/: meson.build
arch/x86/descriptors_x86/: meson.build
arch/x86/i386/: meson.build
arch/x86/incs/: ac_io.h  apic_x86.h  cpuid_x86.h  descriptors_x86.h  descriptors_x86_print.h  interrupts_x86.h  msr_x86.h  native_x86.h  regs_x86.h  reset_x86.h
arch/x86/libs/: meson.build
arch/x86/msr_x86/: meson.build
arch/x86/srcs/: cpuid_x86.c  descriptors_x86.c  descriptors_x86_print.c  interrupts_x86.c  reset_x86.c
arch/x86/tests/: meson.build
arch/x86/x86_32/: meson.build
arch/x86/x86_64/: meson.build
libs/: meson.build
libs/ac_acpi/: meson.build
libs/ac_acpi/incs/: ac_acpi.h  ac_acpi_print.h
libs/ac_acpi/srcs/: ac_acpi.c  ac_acpi_print.c
libs/ac_acpi/tests/: grub.cfg  meson.build
libs/ac_assert/: meson.build
libs/ac_assert/incs/: ac_assert.h  ac_debug_assert.h
libs/ac_assert/srcs/: ac_fail_impl.c
libs/ac_bits/incs/: ac_bits.h
libs/ac_bits/tests/: grub.cfg  meson.build
libs/ac_buff/: meson.build
libs/ac_buff/incs/: ac_buff.h  ac_buff_dbg.h
libs/ac_buff/srcs/: ac_buff.c  ac_buff_dbg.c
libs/ac_buff/tests/: grub.cfg  meson.build
libs/ac_buff_pool/: ac_buff_pool.c  meson.build
libs/ac_buff_pool/incs/: ac_buff_pool.h
libs/ac_buff_pool/srcs/: ac_buff_pool.c
libs/ac_buff_pool/tests/: meson.build
libs/ac_check_sum/: meson.build
libs/ac_check_sum/incs/: ac_check_sum.h
libs/ac_check_sum/srcs/: ac_check_sum_u8.c
libs/ac_check_sum/tests/: grub.cfg  meson.build
libs/ac_comp_mgr/: meson.build
libs/ac_comp_mgr/incs/: ac_comp_mgr.h  ac_comp_mgr_internal.h
libs/ac_comp_mgr/srcs/: ac_comp_mgr.c
libs/ac_comp_mgr/tests/: grub.cfg  meson.build
libs/ac_dispatcher/: meson.build
libs/ac_dispatcher/incs/: ac_dispatcher.h
libs/ac_dispatcher/srcs/: ac_dispatcher.c
libs/ac_inet_link/incs/: ac_inet_hton.h  ac_inet_link.h  ac_inet_ntoh.h
libs/ac_inet_link/tests/: grub.cfg  meson.build
libs/ac_mem/: meson.build
libs/ac_mem/incs/: ac_mem.h  ac_mem_dbg.h
libs/ac_mem/srcs/: ac_mem.c  ac_mem_dbg.c
libs/ac_mem/tests/: grub.cfg  meson.build
libs/ac_mem_pool/: meson.build
libs/ac_mem_pool/incs/: ac_mem_pool.h  ac_mem_pool_dbg.h  ac_mem_pool_internal.h
libs/ac_mem_pool/perfs/: grub.cfg  meson.build
libs/ac_mem_pool/srcs/: ac_mem_pool.c  ac_mem_pool_dbg.c
libs/ac_mem_pool/tests/: grub.cfg  meson.build
libs/ac_memcmp/: meson.build
libs/ac_memcmp/incs/: ac_memcmp.h
libs/ac_memcmp/srcs/: ac_memcmp.c
libs/ac_memcpy/: meson.build
libs/ac_memcpy/incs/: ac_memcpy.h
libs/ac_memcpy/srcs/: ac_memcpy.c
libs/ac_memset/: meson.build
libs/ac_memset/incs/: ac_memset.h
libs/ac_memset/srcs/: ac_memset.c
libs/ac_message_pool/: meson.build
libs/ac_message_pool/incs/: ac_message_pool.h
libs/ac_message_pool/srcs/: ac_message_pool.c
libs/ac_message_pool/tests/: grub.cfg  meson.build
libs/ac_mpsc_fifo/: README.md
libs/ac_mpsc_fifo/incs/: ac_mpsc_fifo.h  ac_mpsc_fifo_dbg.h
libs/ac_mpsc_fifo/perfs/: grub.cfg  meson.build
libs/ac_mpsc_fifo/srcs/: ac_mpsc_fifo.c  ac_mpsc_fifo_dbg.c
libs/ac_mpsc_fifo/tests/: meson.build
libs/ac_mpsc_fifo_in/: meson.build
libs/ac_mpsc_fifo_in/incs/: ac_mpsc_fifo_in.h  ac_mpsc_fifo_in_dbg.h  ac_mpsc_fifo_in_internal.h
libs/ac_mpsc_fifo_in/perfs/: grub.cfg  meson.build
libs/ac_mpsc_fifo_in/srcs/: ac_mpsc_fifo_in.c  ac_mpsc_fifo_in_dbg.c
libs/ac_mpsc_fifo_in/tests/: meson.build
libs/ac_mpsc_fifoix/: README.md  meson.build
libs/ac_mpsc_fifoix/incs/: ac_mpsc_fifoi.h  ac_mpsc_fifoi_dbg.h
libs/ac_mpsc_fifoix/srcs/: ac_mpsc_fifoi.c  ac_mpsc_fifoi_dbg.h
libs/ac_mpsc_fifoix/tests/: grub.cfg
libs/ac_mpsc_link_list/: README.md  meson.build
libs/ac_mpsc_link_list/incs/: ac_mpsc_link_list.h  ac_mpsc_link_list_dbg.h  ac_mpsc_link_list_internal.h
libs/ac_mpsc_ring_buff/: meson.build
libs/ac_mpscfifo/: meson.build
libs/ac_msg_pool/: meson.build
libs/ac_pci/: meson.build
libs/ac_printf/: meson.build
libs/ac_sort/: meson.build
libs/ac_string/: meson.build
libs/ac_time/: meson.build
libs/incs/: README.md  ac.h  ac_arg.h  ac_attributes.h  ac_bits.h  ac_cpu_perf.h  ac_crash.h  ac_inet.h  ac_intmath.h  ac_memmgr.h  ac_message.h  ac_msg.h  ac_poweroff.h  ac_putchar.h  ac_putchar_dbg.h  ac_receptor.h  ac_status.h  ac_stop.h  ac_sysconf.h  ac_test.h  ac_thread.h  ac_tsc.h  ac_xstr.h  meson.build  putchar_dbg.h
libs/putchar_dbg/: meson.build
libs/tests/: meson.build
platform/: meson.build
platform/Posix/: README.md  meson.build
platform/VersatilePB/: README.md  meson.build  meson.link.ld
platform/pc_i386/: meson.build
platform/pc_i586/: meson.build  meson.link.ld
platform/pc_x86_32/: meson.build  meson.link.ld
platform/pc_x86_64/: meson.build  meson.link.ld
platform/tests/: meson.build
tests/: meson.build
tests/test-ac_arg/: grub.cfg  meson.build
tests/test-ac_assert/: meson.build
tests/test-ac_cpu_perf/: meson.build
tests/test-ac_dispatcher/: grub.cfg  meson.build  meson.link.ld
tests/test-ac_memmgr/: meson.build
tests/test-ac_mpscfifo/: meson.build
tests/test-ac_printf/: meson.build
tests/test-ac_putchar/: grub.cfg  meson.build
tests/test-ac_receptor/: meson.build
tests/test-ac_string/: meson.build  meson.link.ld
tests/test-ac_sysconf/: meson.build  meson.link.ld
tests/test-ac_thread/: grub.cfg  meson.build
tests/test-ac_timer/: meson.build
tests/test-ac_tsc/: grub.cfg  meson.build
tests/test-putchar_dbg/: .meson.build.swp  meson.build
(+500 files in other folders)
