# Copyright 2015 wink saville
#
# licensed under the apache license, version 2.0 (the "license");
# you may not use this file except in compliance with the license.
# you may obtain a copy of the license at
#
#     http://www.apache.org/licenses/license-2.0
#
# unless required by applicable law or agreed to in writing, software
# distributed under the license is distributed on an "as is" basis,
# without warranties or conditions of any kind, either express or implied.
# see the license for the specific language governing permissions and
# limitations under the license.



#libsIncDirs = include_directories('incs')
runtimeIncDirs += [include_directories('incs')]

subdir('ac_acpi')
subdir('ac_assert')
subdir('ac_bits')
subdir('ac_mem')
subdir('ac_check_sum')
subdir('ac_comp_mgr')
subdir('ac_dispatcher')
subdir('ac_memcmp')
subdir('ac_memcpy')
subdir('ac_memset')
subdir('ac_mem_pool')
subdir('ac_mpsc_fifo')
subdir('ac_mpscfifo')
subdir('ac_msg_pool')
subdir('ac_pci')
subdir('ac_printf')
subdir('ac_sort')
subdir('ac_string')
subdir('ac_time')
