# Copyright 2015 wink saville
#
# licensed under the apache license, version 2.0 (the "license");
# you may not use this file except in compliance with the license.
# you may obtain a copy of the license at
#
#     http://www.apache.org/licenses/license-2.0
#
# unless required by applicable law or agreed to in writing, software
# distributed under the license is distributed on an "as is" basis,
# without warranties or conditions of any kind, either express or implied.
# see the license for the specific language governing permissions and
# limitations under the license.

subdir('test-ac_arg')
subdir('test-ac_assert')
subdir('test-ac_dispatcher')
subdir('test-ac_memmgr')
subdir('test-ac_mpscfifo')
subdir('test-ac_receptor')
subdir('test-ac_string')
subdir('test-ac_sysconf')
subdir('test-ac_thread')
subdir('test-ac_timer')
subdir('test-ac_tsc')
